<resources>
    <string name="app_name">ePrachar Business</string>
    <string name="enter_admin_details">Enter Admin Details</string>
    <string name="submit">Reset Prachar</string>
    <string name="whatsapp_suffix">EPrachar</string>
    <string name="suchana">NOTE:\n\n
1. Please accept all permissions requested by the app.\n
2. Please enable Accessibility permission from settings.\n
3. Please enter the admin number in the above box.\n
4. Get admin number from app distributor.</string>
    <string name="heading">E-Election Campaign</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="stopPrachar">Prachar</string>
    <string name="sms">SMS</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="daily_message_limit">Daily Message Limit</string>
    <string name="enter_admin_code">Enter Admin Code</string>
</resources>